feat: Add onboarding, admin, and guide pages, enhance event and task management, and update Firebase security rules.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,18 @@
 NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+
+# Optional: use Firebase emulators locally to avoid hitting production
+# NEXT_PUBLIC_USE_FIREBASE_EMULATORS=true
+# NEXT_PUBLIC_FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
+# NEXT_PUBLIC_FIREBASE_FIRESTORE_EMULATOR_HOST=localhost:8080
+# NEXT_PUBLIC_FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
+# Turn on to auto sign-in anonymously (requires enabling Anonymous in Firebase console)
+# NEXT_PUBLIC_ENABLE_ANON_AUTH=true
+
+# Dev auto-login (email/password) for local runs. Only used in non-production.
+# NEXT_PUBLIC_DEV_EMAIL=dev@example.com
+# NEXT_PUBLIC_DEV_PASSWORD=super-secret
