--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
     "googleapis": "^166.0.0",
