--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@vercel/blob": "^2.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
+    "heic2any": "^0.0.4",
+    "heic-convert": "^2.1.0",
     "googleapis": "^166.0.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
