--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@vercel/blob": "^2.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
-    "heic2any": "^0.0.4",
-    "heic-convert": "^2.1.0",
     "googleapis": "^166.0.0",
+    "heic-convert": "^2.1.0",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
     "react": "19.2.0",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/heic-convert": "^2.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
