Add AI-powered deadline suggestion with Firebase Admin SDK
Features:
- Auto-suggest task deadlines using GPT-4o based on event context
- Event export/summary feature for NotebookLM integration
- Firebase Admin SDK integration for server-side operations
- Secure credential handling with .gitignore protection

Required: Add Firebase Admin credentials to Vercel environment variables

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/blob": "^2.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "googleapis": "^166.0.0",
     "heic-convert": "^2.1.0",
     "heic2any": "^0.0.4",
